add model metrics

--- a/output/random-forest-results.qmd
+++ b/output/random-forest-results.qmd
@@ -11,6 +11,9 @@ options(tidyverse.quiet = T)
 
 library(targets)
 tar_source('R')
+
+tar_load(final_models)
+tar_load(dataset_split)
 ```
 
 # Interpretation
@@ -54,6 +57,24 @@ Model fit:
 
 Most important variables:
 
+```{r}
+#| echo: false
+#| eval: true
+#| label: city-temp-metrics
+
+last_rf_model <- final_models$cities_temp
+df_train <- dataset_split[[1]]$train
+df_test <- dataset_split[[1]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
+
 ![](../graphics/cities_temp_vip.png)
 
 Relationships with most important variables:
@@ -67,6 +88,24 @@ Model fit:
 ![](../graphics/neighbourhoods_temp_model-fit.png)
 
 Most important variables:
+
+```{r}
+#| echo: false
+#| eval: true
+#| label: nhood-temp-metrics
+
+last_rf_model <- final_models$neighbourhoods_temp
+df_train <- dataset_split[[7]]$train
+df_test <- dataset_split[[7]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
 
 ![](../graphics/neighbourhoods_temp_vip.png)
 
@@ -82,6 +121,24 @@ Model fit:
 
 Most important variables:
 
+```{r}
+#| echo: false
+#| eval: true
+#| label: street-temp-metrics
+
+last_rf_model <- final_models$streets_temp
+df_train <- dataset_split[[13]]$train
+df_test <- dataset_split[[13]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
+
 ![](../graphics/streets_temp_vip.png)
 
 Relationships with most important variables:
@@ -95,6 +152,24 @@ Relationships with most important variables:
 ![](../graphics/cities_UV_model-fit.png)
 
 Most important variables:
+
+```{r}
+#| echo: false
+#| eval: true
+#| label: city-uv-metrics
+
+last_rf_model <- final_models$cities_UV
+df_train <- dataset_split[[2]]$train
+df_test <- dataset_split[[2]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
 
 ![](../graphics/cities_UV_vip.png)
 
@@ -110,6 +185,24 @@ Model fit:
 
 Most important variables:
 
+```{r}
+#| echo: false
+#| eval: true
+#| label: nhood-uv-metrics
+
+last_rf_model <- final_models$neighbourhoods_UV
+df_train <- dataset_split[[8]]$train
+df_test <- dataset_split[[8]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
+
 ![](../graphics/neighbourhoods_UV_vip.png)
 
 Relationships with most important variables:
@@ -123,6 +216,24 @@ Relationships with most important variables:
 ![](../graphics/cities_CO_model-fit.png)
 
 Most important variables:
+
+```{r}
+#| echo: false
+#| eval: true
+#| label: city-co-metrics
+
+last_rf_model <- final_models$cities_CO
+df_train <- dataset_split[[3]]$train
+df_test <- dataset_split[[3]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
 
 ![](../graphics/cities_CO_vip.png)
 
@@ -138,6 +249,24 @@ Model fit:
 
 Most important variables:
 
+```{r}
+#| echo: false
+#| eval: true
+#| label: nhood-co-metrics
+
+last_rf_model <- final_models$neighbourhoods_CO
+df_train <- dataset_split[[9]]$train
+df_test <- dataset_split[[9]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
+
 ![](../graphics/neighbourhoods_CO_vip.png)
 
 Relationships with most important variables:
@@ -151,6 +280,24 @@ Relationships with most important variables:
 ![](../graphics/cities_SO2_model-fit.png)
 
 Most important variables:
+
+```{r}
+#| echo: false
+#| eval: true
+#| label: city-so2-metrics
+
+last_rf_model <- final_models$cities_SO2
+df_train <- dataset_split[[6]]$train
+df_test <- dataset_split[[6]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
 
 ![](../graphics/cities_SO2_vip.png)
 
@@ -166,6 +313,24 @@ Model fit:
 
 Most important variables:
 
+```{r}
+#| echo: false
+#| eval: true
+#| label: nhood-so2-metrics
+
+last_rf_model <- final_models$neighbourhoods_SO2
+df_train <- dataset_split[[12]]$train
+df_test <- dataset_split[[12]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
+
 ![](../graphics/neighbourhoods_SO2_vip.png)
 
 Relationships with most important variables:
@@ -179,6 +344,24 @@ Relationships with most important variables:
 ![](../graphics/cities_NO2_model-fit.png)
 
 Most important variables:
+
+```{r}
+#| echo: false
+#| eval: true
+#| label: city-no2-metrics
+
+last_rf_model <- final_models$cities_NO2
+df_train <- dataset_split[[4]]$train
+df_test <- dataset_split[[4]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
 
 ![](../graphics/cities_NO2_vip.png)
 
@@ -194,6 +377,24 @@ Model fit:
 
 Most important variables:
 
+```{r}
+#| echo: false
+#| eval: true
+#| label: nhood-no2-metrics
+
+last_rf_model <- final_models$neighbourhoods_NO2
+df_train <- dataset_split[[10]]$train
+df_test <- dataset_split[[10]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
+
 ![](../graphics/neighbourhoods_NO2_vip.png)
 
 Relationships with most important variables:
@@ -208,6 +409,24 @@ Relationships with most important variables:
 
 Most important variables:
 
+```{r}
+#| echo: false
+#| eval: true
+#| label: city-o3-metrics
+
+last_rf_model <- final_models$cities_O3
+df_train <- dataset_split[[5]]$train
+df_test <- dataset_split[[5]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
+
 ![](../graphics/cities_O3_vip.png)
 
 Relationships with most important variables:
@@ -217,6 +436,24 @@ Relationships with most important variables:
 ## Neighbourhood Scale
 
 Model fit:
+
+```{r}
+#| echo: false
+#| eval: true
+#| label: nhood-o3-metrics
+
+last_rf_model <- final_models$neighbourhoods_O3
+df_train <- dataset_split[[11]]$train
+df_test <- dataset_split[[11]]$test
+
+bind_rows(
+  augment(last_rf_model, new_data = df_train) %>% 
+    mutate(type = "train"),
+  augment(last_rf_model, new_data = df_test) %>% 
+    mutate(type = "test")) %>% 
+  group_by(type) %>% 
+  metrics(value, .pred)
+```
 
 ![](../graphics/neighbourhoods_O3_model-fit.png)
 
